# todo-list_fast-api

./: pyproject.toml
src/: main.py  schemas.py
tests/: conftest.py  test_main.py
